# Pseudo-Spectral-Discretization

./: .gitignore  .pre-commit-config.yaml  Eigenmodes.py  README.md  pyproject.toml  requirements.txt  spectrum.py  tutorial.md
.github/workflows/: python-app.yml
benchmark/: fermion2D.py
example_scripts/: cosine-derivative.py  sine-derivative.py  temp.py
examples/: anti-periodic-cosine-derivative.py  cosine-derivative.py  sine-derivative.py
pseudospectral/: __init__.py  derivative_1D.py  dirac_operator.py  free_fermions_2D.py  slogdet.py  spectrum.py
pseudospectral/example_scripts/: cosine-derivative.py
pseudospectral/spectra/: derivative1D.py  derivative_1D.py  element_wise.py  fermion2D.py  free_fermions_2D.py  identity.py  magneticField.py  naive_implementation.py
test/: conftest.py  test_boundary_conditions.py  test_broadcasting.py  test_element_wise.py  test_fermion_2D_mass_mu.py  test_fermion_2D_real_basis.py  test_fermion_2D_spectra.py  test_fermion_2D_spectral_basis.py  test_fermion_2D_transform.py  test_fermion_2d_interface.py  test_identity.py  test_lattice.py  test_operator_addition.py  test_real_basis.py  test_real_space.py  test_slogdet.py  test_spectra.py  test_spectral_basis.py  test_spectral_space.py  test_transform.py
test/.cph/: .test_transform.py_d2d6822c808b8165c140db0a7be46aff.prob
tests/: conftest.py  test_real_basis.py  test_real_space.py  test_spectra.py  test_spectral_space.py  test_spectrum.py  test_transform.py
