[project]
name = "pseudospectral"
version = "0.1.0"
license = { file = "LICENSE" }
authors = [
    {name = "Mayank Goel", email = "mayank.goel447@gmail.com"},
    {name = "Julian Lenz", email = "j.lenz@hzdr.de"}
]
description = "A Python package for pseudospectral discretization of the Dirac operator."
keywords = ["pseudospectral", "spectral methods", "Dirac Operator"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy >= 2.0.0",
    "scipy == 1.14.0",
    "matplotlib >= 3.9.0",
    "scikit-learn >= 1.5.1"
]

[project.optional-dependencies]
dev = [
    "ruff >= 0.5.0",
    "pre-commit >= 4.6.0"
]
test = ["pytest >= 8.2.2"]

[tool.setuptools]
py-modules = [
    "pseudospectral",
]

[tool.ruff.lint]
extend-select = ["E501"] # Add the `line-too-long` rule to the enforced rule set.


[tool.ruff]
line-length = 280 # Set the maximum line length to 250.
