[project]
name = "pseudospectral"
version = "0.1.0"
license = { file = "LICENSE" }
authors = [
  { name = "Mayank Goel", email = "mayank.goel447@gmail.com" },
  { name = "Julian Lenz", email = "j.lenz@hzdr.de" },
]
description = "A Python package for pseudospectral discretization of the Dirac operator."
keywords = ["pseudospectral", "spectral methods", "Dirac Operator"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy >= 2.0.0",
    "scipy == 1.14.0",
    "matplotlib >= 3.9.0",
    "scikit-learn >= 1.5.1"
]

[project.optional-dependencies]
dev = [
    "pre-commit >= 4.6.0"
]
test = ["pytest >= 8.2.2"]

[tool.ruff]
exclude = ["__init__.py"]
show-fixes = true
line-length = 250

[tool.ruff.lint]
extend-select = ["E501", "C4", "SIM", "TCH"]
